--- a/ladesaeule.2.html
+++ b/ladesaeule.2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <title>Hello, world!</title>
+    <title>Ladevorgang</title>
 </head>
 
 <body>
@@ -37,6 +37,72 @@
     <div class="container-fluid">
         <h3 align="CENTER">Ladevorgang</h3>
     </div>
+
+
+
+    <div class="container-fluid">
+        <h4>Ladefortschritt:</h4>
+
+        <div class="progress">
+            <div id="dynamic" class="progress-bar bg-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                <span id="current-progress"></span>
+            </div>
+        </div>
+        <script>
+            $(function() {
+                var current_progress = 0;
+                var interval = setInterval(function() {
+                    current_progress += 1;
+                    $("#dynamic")
+                        .css("width", current_progress + "%")
+                        .attr("aria-valuenow", current_progress)
+                        .text(current_progress + "% Charged");
+                    if (current_progress >= 100)
+                        clearInterval(interval);
+                }, 500);
+            });
+        </script>
+
+        <p></p>
+        <h4>Kosten:</h4>
+        <p></p>
+        <h4>Standort des Fahrzeuges:</h4>
+        <h5>Rheinkai 21, 55411 Bingen am Rhein</h5>
+        <div id="googleMap" style="width:100%;height:400px;"></div>
+        <script src="js/standort.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA84ZrNTtrdRZNl0E8l5PFlyDo59riRPCw&callback=myMap"></script>
+        <p></p>
+    </div>
+
+    <div class="container-fluid">
+        <h4>User:</h4>
+        <div class="card" style="width:100%">
+            <p></p>
+            <h3 align="CENTER"><img class="card-img-top" src="images/Profilbild_3_Frank_Mehler.svg" alt="Card image" style="width:20%"></h3>
+            <div class="card-body">
+                <h4 class="card-title">Frank Mehler</h4>
+                <p class="card-text">Fahrzeug: Audi e-tron</p>
+                <p>Akkukapazität: 95kWh</p>
+                <p>Zahlungsmethode: Bitcoin</p>
+                <p></p>
+
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <p></p>
+        <h4>Bemerkungen zu Ladevorgang:</h4>
+        <p></p>
+        <form action="/action_page.php">
+            <div class="form-group">
+                <label for="comment">Bemerkung:</label>
+                <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Merken</button>
+        </form>
+    </div>
+    </div>
+
 
 
 </body>
