--- a/ladesaeule.1.html
+++ b/ladesaeule.1.html
@@ -36,7 +36,23 @@
     </nav>
 
     <div class="container-fluid">
-        <h3 align="CENTER">Ladesäule reservieren</h3>
+        <h3 align="CENTER">Ladesäule in Ihrer Nähe reservieren:</h3>
+    </div>
+
+    <div class="container">
+        <form action="/action_page.php">
+            <div class="form-group">
+                <label for="sel1">Bitte wählen Sie die Ladesäule aus, die Sie reservieren möchten:</label>
+                <select class="form-control" id="sel1" name="sellist1">
+                  <option>Hindenburganlage</option>
+                  <option>Rheinkai</option>
+                  <option>Berlinstraße</option>
+                  <option>Museumstraße</option>
+                                </select>
+            </div>
+            <a href="404.html" class="btn btn-primary">kostenpflichtig reservieren</a>
+            <p></p>
+        </form>
     </div>
 
     <div class="container">
@@ -44,7 +60,7 @@
         <script src="js/ladesauelen.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA84ZrNTtrdRZNl0E8l5PFlyDo59riRPCw&callback=myMap"></script>
         <p></p>
-        <h2>Informationen zu Ladesäule:</h2>
+        <h2>Informationen zu den Ladesäulen:</h2>
         <p></p>
         <div id="accordion">
             <div class="card">
@@ -55,8 +71,8 @@
                 </div>
                 <div id="collapseOne" class="collapse show" data-parent="#accordion">
                     <div class="card-body">
-                        Diese Ladesäule befindet sich unmittelbar neben Restaurant „Riverside“ am Kulturufer von Bingen. Die neugestaltete Rheinpromenade lädt bei gutem Wetter zu einem Spaziergang ein. Die bingener Innenstadt ist fußläufig in 5 Minuten erreichbar. Besonders
-                        zu empfehlen ist außerdem ist die nahgelegene Vinothek, welche eine große Auswahl hervorragender Weine von der Nahe und aus Rheinhessen bietet.
+                        Diese Ladesäule befindet sich unmittelbar neben dem Restaurant „Riverside“ am Kulturufer von Bingen. Die neugestaltete Rheinpromenade lädt bei gutem Wetter zu einem Spaziergang ein. Die Binger Innenstadt ist fußläufig in 5 Minuten erreichbar. Besonders
+                        zu empfehlen ist außerdem die nahegelegene Vinothek, welche eine große Auswahl hervorragender Weine von der Nahe und aus Rheinhessen bietet.
                     </div>
                 </div>
             </div>
@@ -69,8 +85,8 @@
                 </div>
                 <div id="collapseTwo" class="collapse" data-parent="#accordion">
                     <div class="card-body">
-                        Diese Ladesäule befindet sich unmittelbar an der Touristen-Information Bingen. Die neugestaltete Rheinpromenade lädt bei gutem Wetter zu einem Spaziergang ein. Die bingener Innenstadt ist fußläufig in 5 Minuten erreichbar. Besonders zu empfehlen ist die
-                        nahgelegene Vinothek, welche eine große Auswahl köstlicher Weine aus Rheinhessen und von der Nahe bietet.
+                        Diese Ladesäule befindet sich unmittelbar an der Touristen-Information Bingen. Die neugestaltete Rheinpromenade lädt bei gutem Wetter zu einem Spaziergang ein. Die Binger Innenstadt ist fußläufig in 5 Minuten erreichbar. Besonders zu empfehlen ist die
+                        nahegelegene Vinothek, welche eine große Auswahl köstlicher Weine aus Rheinhessen und von der Nahe bietet.
                     </div>
                 </div>
             </div>
@@ -98,13 +114,12 @@
                 </div>
                 <div id="collapseFour" class="collapse" data-parent="#accordion">
                     <div class="card-body">
-                        Direkt neben dem NH-Hotel Bingen. Die neugestaltete Rheinpromenade lädt bei gutem Wetter zu einem Spaziergang ein. Die bingener Innenstadt ist fußläufig in 5 Minuten erreichbar. Empfehlung: Kaffeerösterrei Klingler am Bürgermeister-Franz-Neff-Platz direkt
+                        Direkt neben dem NH-Hotel Bingen. Die neugestaltete Rheinpromenade lädt bei gutem Wetter zu einem Spaziergang ein. Die Binger Innenstadt ist fußläufig in 5 Minuten erreichbar. Empfehlung: Kaffeerösterrei Klingler am Bürgermeister-Franz-Neff-Platz direkt
                         unterhalb der Burg Klopp.
-
                     </div>
                 </div>
             </div>
-
+            <p></p>
         </div>
     </div>
 </body>
