--- a/ladesaeule.4.1.html
+++ b/ladesaeule.4.1.html
@@ -50,7 +50,7 @@
                 <p class="card-text">Fahrzeug: Tesla Model S
                     <p>Akkukapazität: 100kWh</p>
                     <p>Zahlungsmethode: PayPal</p>
-                    <a href="https://google.de" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
+                    <a href="404.html" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
                 <p class="card-text">Fahrzeug: BMW i8</p>
                 <p>Akkukapazität: 5,2kWh</p>
                 <p>Zahlungsmethode: Bankeinzug</p>
-                <a href="https://google.de" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
+                <a href="404.html" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
             </div>
         </div>
 
@@ -74,7 +74,7 @@
                 <p class="card-text">Fahrzeug: Audi e-tron</p>
                 <p>Akkukapazität: 95kWh</p>
                 <p>Zahlungsmethode: Bitcoin</p>
-                <a href="https://google.de" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
+                <a href="404.html" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
             </div>
         </div>
         <div class="card" style="width:100%">
@@ -85,12 +85,12 @@
                 <p class="card-text">Fahrzeug: Jaguar I‑PACE</p>
                 <p>Akkukapazität: 90kWh</p>
                 <p>Zahlungsmethode: Giropay</p>
-                <a href="https://google.de" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
+                <a href="404.html" class="btn btn-secondary btn-lg btn-sm">Profil bearbeiten</a>
             </div>
         </div>
 
         <p></p>
-        <a href="https://google.de" class="btn btn-secondary btn-lg btn-block">Neuen User anlegen</a>
+        <a href="404.html" class="btn btn-secondary btn-lg btn-block">Neuen User anlegen</a>
         <p></p>
     </div>
 </body>
