--- a/ladesaeule.2.html
+++ b/ladesaeule.2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <title>Ladevorgang</title>
 </head>
 
@@ -38,19 +38,17 @@
         <h3 align="CENTER">Ladevorgang</h3>
     </div>
 
-
-
     <div class="container-fluid">
         <h4>Ladefortschritt:</h4>
 
-        <div class="progress">
+        <div class="progress" style="height: 40px">
             <div id="dynamic" class="progress-bar bg-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                 <span id="current-progress"></span>
             </div>
         </div>
         <script>
             $(function() {
-                var current_progress = 0;
+                var current_progress = 10;
                 var interval = setInterval(function() {
                     current_progress += 1;
                     $("#dynamic")
@@ -59,15 +57,29 @@
                         .text(current_progress + "% Charged");
                     if (current_progress >= 100)
                         clearInterval(interval);
+
+                    if (current_progress < 100) {
+                        var kostenStromInt = current_progress * 0.26;
+                        var kostenStromRunden = kostenStromInt.toFixed(2);
+                        document.getElementById("kostenStromAnzeige").innerHTML = kostenStromRunden + "€";
+                    }
+
                 }, 500);
             });
         </script>
 
         <p></p>
-        <h4>Kosten:</h4>
+        <hr>
+        <h4>Kosten: <i id="kostenStromAnzeige"></i></h4>
+
+        <hr>
+
+
+
+
         <p></p>
         <h4>Standort des Fahrzeuges:</h4>
-        <h5>Rheinkai 21, 55411 Bingen am Rhein</h5>
+        <h6><i>Rheinkai 21, 55411 Bingen am Rhein</i></h6>
         <div id="googleMap" style="width:100%;height:400px;"></div>
         <script src="js/standort.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA84ZrNTtrdRZNl0E8l5PFlyDo59riRPCw&callback=myMap"></script>
@@ -75,7 +87,7 @@
     </div>
 
     <div class="container-fluid">
-        <h4>User:</h4>
+        <h4>User / Fahrer:</h4>
         <div class="card" style="width:100%">
             <p></p>
             <h3 align="CENTER"><img class="card-img-top" src="images/Profilbild_3_Frank_Mehler.svg" alt="Card image" style="width:20%"></h3>
@@ -102,7 +114,12 @@
         </form>
     </div>
     </div>
-
+    <p></p>
+    <div class="container-fluid">
+        <a href="#" onclick="window.print();"> <img src="images/printer.svg" style="width:5%"></a>
+        <a href="https://mail.zdv.net"><img src="images/mail.svg" style="width:5%"></a>
+        <p></p>
+    </div>
 
 
 </body>
