--- a/ladesaeuleIndex.html
+++ b/ladesaeuleIndex.html
@@ -25,12 +25,10 @@
                         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-
                 <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule finden</a>
                 <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang</a>
                 <a class="nav-item nav-link" href="ladesaeule.3.html">Historie</a>
                 <a class="nav-item nav-link" href="ladesaeule.4.html">Userverwaltung</a>
-
             </div>
         </div>
     </nav>
@@ -43,7 +41,6 @@
             <div class="col-md" style="background-color:white;">
                 <div class="table-responsive">
                     <table class="table table-hover">
-
                         <tbody>
                             <tr>
                                 <td align="CENTER">
@@ -73,14 +70,12 @@
                                             <h4>Userverwaltung</h4>
                                             <img src="images/Uservw.png" width="100"></td>
                             </tr>
-
-
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-
+    </div>
 </body>
 
 </html>
