--- a/ladesaeule.3.html
+++ b/ladesaeule.3.html
@@ -16,9 +16,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-
-
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">
             <img src="images/TH-Logo.svg" width="60" height="60" class="d-inline-block align-top" alt=""> </a>
@@ -28,20 +25,16 @@
                         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-
                 <a class="nav-item nav-link" href="ladesaeule.1.html">Ladesäule finden</a>
                 <a class="nav-item nav-link" href="ladesaeule.2.html">Ladevorgang</a>
                 <a class="nav-item nav-link" href="ladesaeule.3.html">Historie</a>
                 <a class="nav-item nav-link" href="ladesaeule.4.0.html">Userverwaltung</a>
-
             </div>
         </div>
     </nav>
-
     <div class="container-fluid">
         <h3 align="CENTER">Histroie</h3>
     </div>
-
     <div class="container">
         <h2>Übersicht bisher durchgeführter Ladevorgänge:</h2>
         <p>Suchen Sie nach Fahrer, Datum oder Ladesäule:</p>
@@ -100,13 +93,12 @@
             });
         </script>
 
-
         <div class="container">
             <a href="#" onclick="window.print();"> <img src="images/printer.svg" style="width:5%"></a>
             <a href="https://mail.zdv.net"><img src="images/mail.svg" style="width:5%"></a>
             <p></p>
         </div>
-
+    </div>
 </body>
 
 </html>
