--- a/ladesaeule.3.html
+++ b/ladesaeule.3.html
@@ -37,8 +37,8 @@
     </div>
     <div class="container">
         <h2>Übersicht bisher durchgeführter Ladevorgänge:</h2>
-        <p>Suchen Sie nach Fahrer, Datum oder Ladesäule:</p>
-        <input class="form-control" id="myInput" type="text" placeholder="Search..">
+        <p>Suchen Sie nach Fahrer, Datum, Ladesäule, Ladeleistung oder Kosten:</p>
+        <input class="form-control" id="myInput" type="text" placeholder="Suchen....">
         <br>
         <table class="table table-bordered table-striped">
             <thead>
